--- a/package.xml
+++ b/package.xml
@@ -43,9 +43,13 @@
 
   <build_depend>roscpp</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>cmake_modules</build_depend>
+  <build_depend>eigen_conversions</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>tf</run_depend>
+  <run_depend>cmake_modules</run_depend>
+  <run_depend>eigen_conversions</run_depend>
 
   <export>
   </export>
